[metadata]
name=geopmdpy
version = attr: geopmdpy.__version__

[options]
packages = geopmdpy
python_requires = >=3.6
setup_requires =
    setuptools>=59.6.0
    setuptools-scm>=6.4.2
    cffi>=1.14.5
install_requires =
    cffi>=1.14.5
    dasbus>=1.6
    docstring_parser>=0.13
    importlib_metadata>=4.0.0
    jsonschema>=3.2.0
    prometheus_client>=0.9.0
    psutil>=5.8.0
    pyyaml>=6.0.0
    setuptools>=59.6.0
    setuptools-scm>=6.4.2
    seaborn[stats]>=0.11.2

[options.entry_points]
console_scripts =
  geopmd = geopmdpy.__main__:main
  geopmaccess = geopmdpy.access:main
  geopmexporter = geopmdpy.exporter:main
  geopmread = geopmdpy.read:main
  geopmsession = geopmdpy.session:main
  geopmwrite = geopmdpy.write:main

[options.package_data]
geopmdpy =
    VERSION
