[metadata]
name=geopmdpy
version = attr: geopmdpy.__version__

[options]
packages = geopmdpy
python_requires = >=3.6
setup_requires =
    setuptools>=59.6.0
    setuptools-scm>=6.4.2
    cffi>=1.13.2
install_requires =
    cffi>=1.13.2
    dasbus>=1.6
    jsonschema>=2.6.0
    psutil>=5.4.8
    prometheus_client>=0.7.1

[options.extras_require]
stats =
    seaborn>=0.11.2
    pyyaml>=6.0.0
dbus_xml =
    docstring-parser>0.13

[options.entry_points]
console_scripts =
  geopmd = geopmdpy.__main__:main
  geopmaccess = geopmdpy.access:main
  geopmexporter = geopmdpy.exporter:main
  geopmread = geopmdpy.read:main
  geopmsession = geopmdpy.session:main
  geopmwrite = geopmdpy.write:main

[options.package_data]
geopmdpy =
    VERSION
