[metadata]
name=geopmpy
version = attr: geopmpy.__version__

[options]
packages = geopmpy
python_requires = >=3.6
setup_requires =
    setuptools>=59.6.0
    setuptools-scm>=6.4.2
    cffi>=1.14.5
    build>=0.9.0
install_requires =
    build>=0.9.0
    cffi>=1.14.5
    cycler>=0.11.0
    natsort>=8.1.0
    numpy>=1.19.5,<2.0.0
    pandas>=1.1.5
    psutil>=5.8.0
    pyyaml>=6.0.0
    setuptools>=59.6.0
    setuptools-scm>=6.4.2
    tables>=3.7.0

[options.entry_points]
console_scripts =
  geopmlaunch = geopmpy.launcher:main

[options.package_data]
geopmpy =
    VERSION
